commented out missing graphics

--- a/PAW_develop/Notes_papers/PAW_EES_physics.tex
+++ b/PAW_develop/Notes_papers/PAW_EES_physics.tex
@@ -877,7 +877,7 @@ We further insist that given experience with Ewald summation $\al < G_c/(2\pi) $
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{alphatable}
+%    \includegraphics[width=0.5\textwidth]{alphatable}
     \caption{Planewave cutoff to achieve various accuracies at fixed real space cutoff $R_c = $ 2 bohr.} 
     \label{fig:alphatable}
 \end{figure}
@@ -6584,7 +6584,7 @@ In Fig.P.2, we look at unscreened Hartree, which converges terribly - only 2nd o
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{nthetaHarself}
+%    \includegraphics[width=0.5\textwidth]{nthetaHarself}
     \caption{The convergence of the screened Hartree self term for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_{\theta}$. Here, $n_r = 20$, $n_{\phi} = 2n_{\theta}$.} 
     \label{fig:nthetaHarself}
 \end{figure}
@@ -6593,7 +6593,7 @@ In Fig.P.3, we examine the convergence of the screened Hartree self term without
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{nthetaHarwoself}
+%    \includegraphics[width=0.5\textwidth]{nthetaHarwoself}
     \caption{The convergence of the unscreened Hartree term (self term excluded) for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_{\theta}$. Here, we study $n_r = 20$ and $n_r = 30$, using $n_{\phi} = 2n_{\theta}$. Here, $n_{\theta} = 20$, $n_{\phi} = 40$ are used as the ``correct answer'' for the 2 values of $n_r$.} 
     \label{fig:nthetaHarwoself}
 \end{figure}
@@ -6607,7 +6607,7 @@ This would work for us because of the erfc function in 3D allowing for a short r
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{nthetaHarwoselfdiff}
+%    \includegraphics[width=0.5\textwidth]{nthetaHarwoselfdiff}
     \caption{The difference between the Hartree no self term of $n_r = 20$ and $n_r = 30$. The difference is always small.} 
     \label{fig:nthetaHarwoselfdiff}
 \end{figure}
@@ -6616,7 +6616,7 @@ Fig.P.5 achieves the same conclusion as P.4 for Hartree without self.
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{nrHarwoself}
+%    \includegraphics[width=0.5\textwidth]{nrHarwoself}
     \caption{The convergence of the unscreened Hartree term (self term excluded) for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_r$. Here, $n_{\theta} = 10$, $n_{\phi} = 20$. Here, $n_{\theta} = 20$, $n_{\phi} = 40$ are used as the ``correct answer'' for the 2 values of $n_r$.} 
     \label{fig:nrHarwoself}
 \end{figure}
@@ -6625,7 +6625,7 @@ Fig.P.6 shows that we can use very small $n_r$ for Hartree without self - so the
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{eNanalyticscr}
+%    \includegraphics[width=0.5\textwidth]{eNanalyticscr}
     \caption{The convergence of the screened e-N self term for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_r$.} 
     \label{fig:eNanalyticscr}
 \end{figure}
@@ -6634,7 +6634,7 @@ Fig.P.7 screened or pseudized e-ion self term needs $n_r = 16$ to converge to 5 
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{eNanalytic}
+%    \includegraphics[width=0.5\textwidth]{eNanalytic}
     \caption{The convergence of the unscreened e-N self term for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_r$.} 
     \label{fig:eNanalytic}
 \end{figure}
@@ -6643,7 +6643,7 @@ Fig.P.8 indicates the unscreened e-ion self is hopeless, which is also consisten
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{nthetaeNnoself}
+%    \includegraphics[width=0.5\textwidth]{nthetaeNnoself}
     \caption{The convergence of the unscreened e-N term (self term excluded) for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_{\theta}$. Here, we study $n_r = 20$ and $n_r = 30$, using $n_{\phi} = 2n_{\theta}$. Here, $n_{\theta} = 20$, $n_{\phi} = 40$ are used as the ``correct answer'' for the 2 values of $n_r$.} 
     \label{fig:nthetaeNnoself}
 \end{figure}
@@ -6652,7 +6652,7 @@ Fig.P.9 e-ion without self needs $n_{theta} = 4$ and $n_{phi} = 8$ to converge t
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{nthetaElong}
+%    \includegraphics[width=0.5\textwidth]{nthetaElong}
     \caption{The convergence of the long range energy term for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_{\theta}$. Here, we study $n_r = 20$ and $n_r = 30$, using $n_{\phi} = 2n_{\theta}$. Here, $n_{\theta} = 20$, $n_{\phi} = 40$ are used as the ``correct answer'' for the 2 values of $n_r$.} 
     \label{fig:nthetaElong}
 \end{figure}
@@ -6661,7 +6661,7 @@ Fig.P.10 shows that the long range energy term converges superfast in $n_{\theta
 
 \begin{figure}[h!] 
     \centering
-    \includegraphics[width=0.5\textwidth]{nrElong}
+%    \includegraphics[width=0.5\textwidth]{nrElong}
     \caption{The convergence of the long range energy term for the spherical Bessel basis with $\hat {k}_{\mathrm{max}} = 1$ versus $n_r$. Here, $n_{\theta} = 10$, $n_{\phi} = 20$.} 
     \label{fig:nrElong}
 \end{figure}
